compiler-core/src/type_/snapshots/gleam_core__type___tests__const_record_update_field_type_mismatch_error.snap
---
source: compiler-core/src/type_/tests.rs
expression: "pub type Person { Person(name: String, age: Int) }\n\n        pub const alice = Person(\"Alice\", 30)\n        pub const bob = Person(..alice, age: \"not a number\")"
---
----- SOURCE CODE
pub type Person { Person(name: String, age: Int) }

        pub const alice = Person("Alice", 30)
        pub const bob = Person(..alice, age: "not a number")

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:4:46
  │
4 │         pub const bob = Person(..alice, age: "not a number")
  │                                              ^^^^^^^^^^^^^^

Expected type:

    Int

Found type:

    String
